# parameters-rust

./: .env  .env.dist  .gitignore  CHANGELOG-v0.md  Cargo.toml  README.md  parameters_rust.code-workspace
.github/workflows/: dev.yml  publish.yml
lib/: Cargo.toml  README.md
lib/src/: app.rs  lib.rs  parameters.rs  types.rs
src/: app.rs  main.rs
