[package]
name = "parameters"
description = "Automatic replace variables in configuration file templates from environment variables."
version = "0.1.0-dev.3"
license = "MIT"
authors = ["Christian Mayer <christian@fox21.at>"]
homepage = "https://github.com/TheFox/parameters-rust"
documentation = "https://github.com/TheFox/parameters-rust"
repository = "https://github.com/TheFox/parameters-rust"
keywords = ["env", "variables"]
categories = ["cli", "configuration"]
edition = "2018"
default-run = "parameters"

[dependencies]
clap = "^2.33.0"

[profile.release]
panic = 'abort'

[[bin]]
name = "parameters"
path = "src/main.rs"
