[package]
name = "parameters"
description = "Automatic replace variables in configuration file templates from environment variables."
version = "0.2.0"
license = "MIT"
authors = ["Christian Mayer <christian@fox21.at>"]
homepage = "https://github.com/TheFox/parameters-rust"
documentation = "https://github.com/TheFox/parameters-rust"
repository = "https://github.com/TheFox/parameters-rust"
keywords = ["env", "variables", "deployment", "cicd"]
categories = ["command-line-interface", "config", "filesystem", "parsing"]
edition = "2018"
default-run = "parameters"

[build-dependencies]
chrono = "~0.4.0"

[dependencies]

[dependencies.parameters_lib]
path = "lib"
version = "^0.2.0"

[workspace]
members = [
    "lib",
]

[profile.release]
panic = 'abort'

[[bin]]
name = "parameters"
path = "src/main.rs"
