[package]
name = "parameters_lib"
description = "Library"
version = "0.1.0"
license = "MIT"
authors = ["Christian Mayer <christian@fox21.at>"]
homepage = "https://github.com/TheFox/parameters-rust"
documentation = "https://github.com/TheFox/parameters-rust"
repository = "https://github.com/TheFox/parameters-rust"
keywords = ["env", "variables"]
categories = ["command-line-interface", "config", "filesystem", "parsing"]
edition = "2018"

[dependencies]
regex = "^1.5.0"
